# north-wind-test

./: .dockerignore  .env.example  .gitignore  AGENTS.md  QUICKSTART.md  README.md  alembic.ini  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml  tweets_page1.txt
.github/workflows/: docker-build.yml
backend/app/: init_worker.py  main.py
backend/app/api/: router.py
backend/app/core/: config.py  crypto.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  admin.py  database_instance.py  db_init_job.py  question.py  setting.py
backend/app/schemas/: __init__.py  auth.py  database_instance.py  db_init_job.py  imports.py  log.py  practice.py  (+1 more)
backend/migrations/: env.py  script.py.mako
backend/tests/: conftest.py  test_admin_auth.py  test_admin_logs.py  test_admin_questions.py  test_database_instances.py  test_health.py  test_log_service.py  test_models_metadata.py  test_security.py  test_settings.py  test_sql_validation.py
deploy/: Dockerfile.backend  Dockerfile.frontend  backend-entrypoint.sh
docs/: api-spec.md  configuration.md  mysql-compatibility.md  question-template.md  questions_mysql.csv  questions_pg.csv  roadmap.md  security-strategy.md  stage1-summary.md  ui-prototype-notes.md  user-flows.md
frontend/: README.md  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/lib/: admin-api.ts  auth-api.ts  http-client.ts  practice-api.ts
frontend/styles/: globals.css
infrastructure/sql/: northwind_mysql.sql
scripts/: test_mysql_connection.py
(+73 files in other folders)
