[project]
name = "north-wind-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.114.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.1",
    "psycopg[binary]>=3.1.19",
    "pymysql>=1.1.0",
    "redis>=5.0.4",
    "python-dotenv>=1.0.1",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt[crypto]>=2.8.0",
    "bcrypt>=4.1.2,<5.0",
    "cryptography>=42.0.0",
    "sqlparse>=0.5.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "black>=24.4.0",
    "ruff>=0.5.0"
]

[tool.setuptools]
packages = ["backend"]
